Fixed page overflow

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -19,7 +19,7 @@ body {
     border-radius: $roundness;
     background-color: $line-color;
     border: 1px solid $line-color;
-    margin: 10px;
+    margin: 10px 0;
     box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
 }
 
